# untabulate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
src/cellpath/: __init__.py  __init__.pyi  html_parser.c  html_parser.pyi  html_parser.pyx  projection_grid.c  projection_grid.pxd  projection_grid.pyi  projection_grid.pyx  xlsx_parser.c  xlsx_parser.pyi  xlsx_parser.pyx
src/untabulate/: __init__.py  __init__.pyi  cli.py  html_parser.c  html_parser.pyi  html_parser.pyx  projection_grid.c  projection_grid.pxd  projection_grid.pyi  projection_grid.pyx  xlsx_parser.c  xlsx_parser.pyi  xlsx_parser.pyx
tests/: __init__.py  test_cellpath.py  test_cli.py  test_convenience.py  test_untabulate.py
tests/fixtures/: tables.html
