[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "untabulate"
version = "0.1.0"
description = "Untabulate grid data for friendly llm embedddings or similar analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Patrick Dobbs", email = "patrick.dobbs@gmail.com" }
]
keywords = [
    "tables",
    "html",
    "xlsx",
    "excel",
    "parsing",
    "headers",
    "semantic",
    "llm",
    "rag",
    "embeddings",
    "cython",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
lxml = ["lxml>=4.9.0"]
openpyxl = ["openpyxl>=3.1.0"]
html = ["lxml>=4.9.0"]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "cython>=3.0",
    "build",
    "twine",
    "lxml>=4.9.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/patrick/untabulate"
Documentation = "https://github.com/patrick/untabulate#readme"
Repository = "https://github.com/patrick/untabulate.git"
Issues = "https://github.com/patrick/untabulate/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
before-build = "pip install cython"

[tool.cibuildwheel.macos]
before-build = "pip install cython"

[tool.cibuildwheel.windows]
before-build = "pip install cython"

[dependency-groups]
dev = [
    "cython-lint>=0.18.1",
    "pre-commit>=4.5.0",
    "pytest>=8.4.2",
]
